# exploring-haystack-v3

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  skills-lock.json
outputs/: agent_skills  deep_research_agent  hooks_guardrails  monitor_cost
src/: __init__.py  agent_skills.py  deep_research_agent.py  hooks_guardrail.py  monitor_costs.py  todo.py  utils.py
